<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:paddingTop="100dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.pablo.movieseries.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="169dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/icon_login" />

        <EditText
            android:id="@+id/edtUser"
            style="@style/editText_style"
            android:layout_margin="10dp"
            android:hint="@string/edtUser"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/editText_style"
            android:layout_margin="10dp"
            android:hint="@string/edtPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/button_style"
            android:text="@string/btnLogin"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/txtRegister"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
